--- a/scripts/Data Cleaning & Combination for all 5 CSV Files.ipynb
+++ b/scripts/Data Cleaning & Combination for all 5 CSV Files.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Cleaning and Reformatting all 5 CSV Files\n",
-    "### **Objective:** Reformat all CSV files iinto the same format, adding a data function for each week, then exporting the individual CSV Files.\n",
+    "### **Purpose:** Reformat all CSV files into the same format, then adding a data function for each week for ease of data analysis in Tableau.\n",
     "\n",
-    "### Ultimately we will combain all these values into one master CSV file. \n"
+    "The CSV file with all 5 sets of data organized into one sheet named **\"All_Data\"** can be found in the **data/clean** folder in this repository. Individual CSV files reformatted and cleaned have been exported, and can also be found in the folder."
    ]
   },
   {
@@ -26,7 +26,7 @@
    "id": "ad841d2f",
    "metadata": {},
    "source": [
-    "# Data Cleaning for Total Sales"
+    "# Data Cleaning for Total Sales CSV"
    ]
   },
   {
@@ -592,7 +592,7 @@
     "\n",
     "#\n",
     "\n",
-    "# Data Cleaning for Total Trade Spend"
+    "# Data Cleaning for Total Trade Spend CSV"
    ]
   },
   {
@@ -1132,7 +1132,7 @@
    "metadata": {},
    "source": [
     "#\n",
-    "# Data Cleaning for Factory POS"
+    "# Data Cleaning for Factory POS CSV"
    ]
   },
   {
@@ -2006,7 +2006,7 @@
    "metadata": {},
    "source": [
     "#\n",
-    "# Data Cleaning for EComm POS"
+    "# Data Cleaning for EComm POS CSV"
    ]
   },
   {
@@ -5185,7 +5185,7 @@
    "metadata": {},
    "source": [
     "#\n",
-    "# Data Cleaning for DC & Store Inventory"
+    "# Data Cleaning for DC & Store Inventory CSV"
    ]
   },
   {
@@ -6541,7 +6541,7 @@
    "metadata": {},
    "source": [
     "#\n",
-    "# Combining all 5 Cleaned Data Frames"
+    "# Combining Reformatted CSV files into One File"
    ]
   },
   {
@@ -7951,8 +7951,8 @@
    "id": "b1c02919",
    "metadata": {},
    "source": [
-    "# \n",
-    "# Removing Rows Containing 0"
+    "\n",
+    "## Removing Rows Containing 0"
    ]
   },
   {
@@ -8197,12 +8197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 127,
    "id": "8511a687",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Removing all rows with values containg 0\n",
+    "# Removing all rows with values containing 0\n",
+    "# This mitigates skewed values in graph visualizations and projections. \n",
     "df = df[(df != 0).all(axis=1)]"
    ]
   },
@@ -8454,6 +8455,14 @@
    "outputs": [],
    "source": [
     "df.to_csv('All_Data.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0909e322",
+   "metadata": {},
+   "source": [
+    "^ Exported CSV files containing data organized from the five raw files provided. "
    ]
   }
  ],
